5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1771_1189.log
== TEST (2019-05-29 13:17:54) 
-- CODE:
a = input("digite uma sequencia de caracteres: ").upper()
print(a.replace(' ', ''))


-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:18:04) 
-- CODE:
a = input("digite uma sequencia de caracteres: ").upper()
print(a.replace(' ', ''))


-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:18:36) 
-- CODE:
a = input("digite uma sequencia de caracteres: ").upper()
print(a.replace(' ', ' '))


-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:18:56) 
-- CODE:
a = input("digite uma sequencia de caracteres: ").upper()
print(a.replace(' ', ''))


-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:19:01) 
-- CODE:
a = input("digite uma sequencia de caracteres: ").upper()
print(a.replace(' ', ''))


-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:19:09) 
-- CODE:
a = input("digite uma sequencia de caracteres: ").upper()
print(a.replace(' ', '7'))


-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:19:10) 
-- CODE:
a = input("digite uma sequencia de caracteres: ").upper()
print(a.replace(' ', '7'))


-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:22:21) 
-- CODE:
a = input("digite uma sequencia de caracteres: ").upper()
print(a.replace(' ', ''))
if (a[0: ]== a[0: -1]):
	print("1")
else:
	print("0")


-- OUTPUT:
ACARARAJADADAJARARACA
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:22:29) 
-- CODE:
a = input("digite uma sequencia de caracteres: ").upper()
print(a.replace(' ', ''))
if (a[0: ]== a[0: -1]):
	print("1")
else:
	print("0")


-- EXECUTION TIME:
0.165093
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
0
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:22:32) 
-- CODE:
a = input("digite uma sequencia de caracteres: ").upper()
print(a.replace(' ', ''))
if (a[0: ]== a[0: -1]):
	print("1")
else:
	print("0")


-- OUTPUT:
ACARARAJADADAJARARACA
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:23:04) 
-- CODE:
a = input("digite uma sequencia de caracteres: ").upper()
print(a.replace(' ', ''))
if (a[0: ] ==a[:-1]):
	print("1")
else:
	print("0")


-- OUTPUT:
ACARARAJADADAJARARACA
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:23:27) 
-- CODE:
a = input("digite uma sequencia de caracteres: ").upper()
print(a.replace(' ', ''))
if (a[0: ] ==a[::-1]):
	print("1")
else:
	print("0")


-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:23:34) 
-- CODE:
a = input("digite uma sequencia de caracteres: ").upper()
print(a.replace(' ', ''))
if (a[0: ] ==a[::-1]):
	print("1")
else:
	print("0")


-- EXECUTION TIME:
0.201679
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:23:53) 
-- CODE:
a = input("digite uma sequencia de caracteres: ").upper()
print(a.replace(' ', ''))
if (a[0: ] ==a[::-1]):
	print("1")
else:
	print("0")


-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:24:28) 
-- CODE:
a = input("digite uma sequencia de caracteres: ").upper()
print(a.replace(' ', ''))
if (a[0: -1] == a[-1:0]
	print("1")
else:
	print("0")


-- ERROR:
File "XXXX", line 4
    print("1")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:24:35) 
-- CODE:
a = input("digite uma sequencia de caracteres: ").upper()
print(a.replace(' ', ''))
if (a[0: -1] == a[-1:0]):
	print("1")
else:
	print("0")


-- OUTPUT:
ACARARAJADADAJARARACA
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
